--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -31,5 +31,6 @@ const {
 			<slot />
 		</main>
 		<Footer />
+    {import.meta.env.PROD ? <script async src="https://analytics.lcfd.me/script.js" data-website-id="56393a66-5e41-4c69-a6d1-eaedd9cea8f5"></script> : null}
 	</body>
 </html>
