Update copy in homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,12 +54,11 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 
 <PageLayout meta={{ title: "Home" }}>
 	<section>
-		<h1 class="title mb-6">Benvenuti/e!</h1>
-		<p class="mb-4">In questo spazio vi racconterò di tutto sulle ultime nerdate che ho fatto, serie e film che ho guardato, come sta andando l'arrampicata.
-    E tante altre cose che verranno fuori più avanti.</p>
-
-		<p class="mb-4">Quindi, se ti piacciono i giochi in scatola, quelli di ruolo, le serie tv o i film più improbabili, i mattoni fantasy e cose così, sei nel posto giusto.</p>
-		<p class="mb-4 text-xs">⭐ Vi consiglio di usare i tag, sono molto utili per destreggiarsi in questa marmaglia.</p>
+		<h1 class="title mb-6">Ciao!</h1>
+		<p class="mb-4">Qui vi racconterò le ultime nerdate che ho fatto, le ultime serie e film che ho guardato. Oltre a questo ci sarà spazio per l'arrampicata, i viaggi e le escursioni.</p>
+  
+		<p class="mb-4 text-xs">Vi aspetto, buona strada!</p>
+  
 		<SocialList />
 	</section>
 	<section aria-label="Blog post list" class="mt-16">
