--- a/src/pages/chi-sono.astro
+++ b/src/pages/chi-sono.astro
@@ -21,7 +21,7 @@ import ImageOfMe from "./me.jpeg";
       Dal 2022 arrampico con costanza, principalmente boulder.
     </p>
     
-  <Image src={ImageOfMe} alt="Luca">
+  <Image src={ImageOfMe} alt="Luca" />
   
 		<p>Nel tempo libero arrampico e nerdo. Mi piacciono un casino i giochi da tavola e quelli di ruolo. Non gioco più ai videogiochi come un tmepo ma continuo a difendermi con un minutaggio onesto.</p>
   
