--- a/src/pages/chi-sono.astro
+++ b/src/pages/chi-sono.astro
@@ -5,9 +5,6 @@ const meta = {
 	title: "Chi sono",
 	description: "Qualche info utile per capire chi sono",
 };
-
-import { Image } from "astro:assets";
-import ImageOfMe from "./me.jpeg";
 ---
 
 <PageLayout meta={meta}>
@@ -17,22 +14,17 @@ import ImageOfMe from "./me.jpeg";
 			Nerd, classe '93. Credo di aver cominciato con una PS1 di seconda mano. Nel mentre sono
 			arrivati i grandi libroni fantasy e Magic TGC. Da lì in poi é stato tutto in diescesa.
 		</p>
-
 		<p>Dal 2022 arrampico, principalmente boulder.</p>
-
-		<Image src={ImageOfMe} alt="Luca" />
-
 		<p>
 			Nel tempo libero arrampico e nerdo. Mi piacciono un casino i giochi da tavola e quelli di
 			ruolo. Non gioco più con i videogiochi come un tempo, ma continuo a difendermi con un
 			minutaggio onesto su roba leggera.
 		</p>
-
 		<p>Mi piace fare della pixel art per alcuni progetti.</p>
-
 		<p>
 			Continuo a portarmi dietro la passione per i libri fantasy e non credo di volermela togliere.
 			Un giorno voglio togliermi la soddisfazione di scrivere un libro e vederlo stampato su carta.
 		</p>
+		<p>I use Neovim, btw.</p>
 	</div>
 </PageLayout>
