--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -21,13 +21,13 @@ const socialImageURL = new URL(ogImage ? ogImage : "/social-card.png", Astro.url
 <!-- Icons / Favicon -->
 <link rel="icon" href="/favicon.ico" sizes="any" />
 <link rel="icon" href="/icon.svg" type="image/svg+xml" />
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 <link rel="manifest" href="/manifest.webmanifest" />
 <link rel="canonical" href={canonicalURL} />
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
+<meta name="msapplication-TileColor" content="#da532c" />
+<meta name="theme-color" content="#ffffff" />
 
 <!-- Primary Meta Tags -->
 <meta name="title" content={siteTitle} />
@@ -50,8 +50,9 @@ const socialImageURL = new URL(ogImage ? ogImage : "/social-card.png", Astro.url
 {
 	articleDate && (
 		<>
-			<meta property="article:author" content={siteConfig.author} />
-			<meta property="article:published_time" content={articleDate} />
+			{" "}
+			<meta property="article:author" content={siteConfig.author} />{" "}
+			<meta property="article:published_time" content={articleDate} />{" "}
 		</>
 	)
 }
