--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -36,7 +36,7 @@ const url = new URL(Astro.request.url);
 			class="inline-flex items-center grayscale hover:filter-none sm:relative sm:inline-block"
 			aria-current={url.pathname === "/" ? "page" : false}
 		>
-			<span class="text-xl font-bold sm:text-2xl">N e r d</span>
+			<span class="text-xl font-bold sm:text-2xl">Bradipo viandante</span>
 		</a>
 		<nav
 			id="navigation-menu"
